# alecrim-audio-to-text

./: .env_model  .gitignore  README.md  main.py  pyproject.toml
src/alecrim_audio_to_text/: __init__.py  transcricao.py  utils.py
